Adicionado o caminho para o novo arquivo css, onde será estilizado a page-landing

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&amp;family=Poppins:wght@400;600&amp;display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="/styles/main.css">
+    <link rel="stylesheet" href="/styles/partials/page-landing.css">
 
 </head>
 
@@ -19,6 +20,8 @@
             <img src="/images/logo.svg" alt="Proffy">
             <h2>Sua plataforma de estudos online</h2>
         </div>
+
+        <img class="hero-image" src="/images/landing.svg" alt="Plataforma de estudos">
 
         <button>Estudar</button>
         <button>Dar Aulas</button>
