--- a/index.html
+++ b/index.html
@@ -23,8 +23,16 @@
 
         <img class="hero-image" src="/images/landing.svg" alt="Plataforma de estudos">
 
-        <button>Estudar</button>
-        <button>Dar Aulas</button>
+        <div class="buttons-container">
+            <a class="study" href="/study.html">
+                <img src="/images/icons/study.svg" alt="Estudar">
+                Estudar
+            </a>
+            <a class="give-classes" href="/give-classes.html">
+                <img src="/images/icons/give-classes.svg" alt="Dar aulas">
+                Dar aulas
+            </a>
+        </div>
 
     </div>
 </body>
