Local para indicar as conexões realizadas

--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
             </a>
         </div>
 
+        <p class="total-connections">
+            Total de 200 conexões já realixadas
+            <img src="/images/icons/purple-heart.svg" alt="Coração Roxo">
+        </p>
+
     </div>
 </body>
 
