--- a/study.html
+++ b/study.html
@@ -10,18 +10,18 @@
         href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&amp;family=Poppins:wght@400;600&amp;display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="/styles/main.css">
-    <link rel="stylesheet" href="/styles/partials/page-landing.css">
+    <link rel="stylesheet" href="/styles/partials/page-study.css">
 
 </head>
 
-<body id="page-landing">
+<body id="page-study">
     <div id="container">
         <div class="logo-container">
             <img src="/images/logo.svg" alt="Proffy">
             <h2>Sua plataforma de estudos online</h2>
         </div>
 
-        <img class="hero-image" src="/images/landing.svg" alt="Plataforma de estudos">
+        <img class="hero-image" src="/images/study.svg" alt="Plataforma de estudos">
 
         <div class="buttons-container">
             <a class="study" href="/study.html">
