Inserido o cabeçalho e formulário para localizar o proffy

--- a/study.html
+++ b/study.html
@@ -16,30 +16,53 @@
 
 <body id="page-study">
     <div id="container">
-        <div class="logo-container">
-            <img src="/images/logo.svg" alt="Proffy">
-            <h2>Sua plataforma de estudos online</h2>
-        </div>
-
-        <img class="hero-image" src="/images/study.svg" alt="Plataforma de estudos">
-
-        <div class="buttons-container">
-            <a class="study" href="/study.html">
-                <img src="/images/icons/study.svg" alt="Estudar">
-                Estudar
-            </a>
-            <a class="give-classes" href="/give-classes.html">
-                <img src="/images/icons/give-classes.svg" alt="Dar aulas">
-                Dar aulas
-            </a>
-        </div>
-
-        <p class="total-connections">
-            Total de 200 conexões já realixadas
-            <img src="/images/icons/purple-heart.svg" alt="Coração Roxo">
-        </p>
-
+        <header class="page-header">
+            <div class="top-bar-container">
+                <a href="/">
+                    <img src="/images/icons/back.svg" alt="Voltar">
+                    </a>
+                    <img src="/images/logo.svg" alt="Proffy">
+            </div>
+            <div class="header-content">
+                <strong>Esses são os proffys disponíveis</strong>
+                <form id="search-teachers">
+                    <div class="select-block">
+                        <label for="subject">Matéria</label>
+                        <select name="subject" id="subject">
+                            <option value="" disabled="" hidden="">Selecione uma opção</option>
+                            <option value="1">Artes</option>
+                            <option value="2">Biologia</option>
+                            <option value="3">Ciências</option>
+                            <option value="4">Educação física</option>
+                            <option value="5">Física</option>
+                            <option value="6">Geografia</option>
+                            <option value="7">História</option>
+                            <option value="8">Matemática</option>
+                            <option value="9">Português</option>
+                            <option value="10">Química</option>
+                        </select>
+                    </div>
+                    <div class="select-block">
+                        <label for="weekday">Dia da semana</label>
+                        <select name="weekday" id="weekday">
+                            <option value="" disabled="" hidden="">Selecione uma opção</option>
+                            <option value="0">Domingo</option>
+                            <option value="1">Segunda-feira</option>
+                            <option value="2">Terça-feira</option>
+                            <option value="3">Quarta-feira</option>
+                            <option value="4">Quinta-feira</option>
+                            <option value="5">Sexta-feira</option>
+                            <option value="6">Sábado</option>
+                        </select>
+                    </div>
+                    <div class="input-block">
+                        <label for="time">Hora</label>
+                        <input name="time" id="time" type="time" >
+                    </div>
+                    <button type="submit">Filtrar</button>
+                </form>
+            </div>
+        </header>
     </div>
 </body>
-
 </html>
